tokyo_midnight.css
/* ... */
/* === UNREAD MESSAGE DIVIDER === */
.isUnread__908e2 {
  border: none !important;
}

/* === MESSAGE DATE PILL === */
  .content__908e2 {
  background: var(--tokyo-midnight-green) !important; /* changes the background color of the divider content to match the theme */
  color: var(--tokyo-midnight-black) !important; /* Changed the message date to black to make the date visible */
  font-weight: 700 !important; /* Set the text to bold */
}

/* === JUMP TO PRESENT BAR === */

.jumpToPresentBar__0f481 {
    background: rgba(113, 254, 167, 0.08) !important;
    border: 1px solid rgba(113, 254, 167, 0.15) !important;
    backdrop-filter: blur(8px);
}

/* === JUMP TO PRESENT TEXT === */
.barButtonMain__0f481 {
    color: #71fea7;
    font-weight: 700;
}

[class*="jumpToPresentBar"] [class*="buttonChildrenWrapper"] {
  color: var(--tokyo-midnight-text-normal) !important;
  font-weight: 700;
  }

/* === MESSAGE REACTION - ICONS === */
  .icon_f84418 {
    color: var(--tokyo-midnight-icons);
}

/* === MESSAGE REACTION MENU === */
.popover_f84418 {
  background-color: var(--tokyo-midnight-bg-sidebars);
  border: 2px solid var(--tokyo-midnight-green);
  filter: drop-shadow(0 0 10px rgba(29, 202, 58, 0.485));
  }

  /* === MESSAGE REACTION MENU - HOVER === */
.popover_f84418:hover {
  background-color: var(--tokyo-midnight-bg-sidebars);
  border: 2px solid var(--tokyo-midnight-green2);
  filter: drop-shadow(0 0 10px rgba(10, 167, 44, 0.558));
  }

/* === APP BADGE  === */
.botTag_c19a55 {
  background: var(--tokyo-midnight-custom5); /* Changes the color of the background for APP badges next to Bots */
  border: 1px solid #002d01a4 !important;
  }


.botText__82f07 {
  color: var(--tokyo-midnight-black) !important; /* Changes the color of the "APP" text inside APP Badge */
  font-weight: 700 !important;
}

/* === EMBED TITLE === */
.markup__75297 a.embedTitle__623de {
  color: var(--tokyo-midnight-green) !important; /* Changes the color of the title inside Embed messages */
}

/* === EMBED DESCRIPTION === */
.embedDescription__623de {
color: #83f9ba !important; /* Changes the text of the description inside Embed Messages */
}

/* === "Leaving DIscord" Container === */
.container__8a031 {
background: var(--tokyo-midnight-bg-panels);
}

.container__8a031 .icon_a22cb0 {
  color: var(--tokyo-midnight-icons) !important;
}

.container__8a031 .heading-lg\/semibold_cf4812 {
  color: var(--tokyo-midnight-text-header) !important;
}

/* Modal text */
.container__8a031 .text-md\/normal_cf4812 {
    color: var(--tokyo-midnight-text-normal) !important;
}

/* URL preview text */
.container__8a031 .linkCalloutContainer_ad9c52 .text-md\/normal_cf4812 {
    color: var(--text-muted) !important;
}

/* === BOT TAG - VERIFIED === */
.botTagRegular__82f07 {
  background: var(--tokyo-midnight-custom3);
  color: var(--tokyo-midnight-black);
}

/* === FORUM - NEW POST COUNTER === */
.channelInfo_c69b6d .text-xs\/semibold_cf4812 {
  color: var(--tokyo-midnight-green) !important;
  font-weight: 700;
}

/* Guilds - Scrollbar */
.scroller_ef3116 {
    padding-bottom: 25px;
}

.wrapper__6e9f8[data-list-item-id="guildsnav___home"] img {
    opacity: 0;
}

.wrapper__6e9f8[data-list-item-id="guildsnav___home"] .childWrapper__6e9f8::before {
    content: "";
    position: absolute;
    inset: 0;
    background: var(--tokyo-midnight-home-logo) center/contain no-repeat;
    background-size: 160%;
}

/* === Activity Panel === */
.activityPanel__5e434 {
background-color: var(--tokyo-midnight-bg-sidebars);
border: 1px solid #2b2a3a !important;
}

/* === FORUM - BACKGROUND === */
.list_f369db {
  background-color: var(--tokyo-midnight-bg-main);
}

/* === FORUM - POSTS === */
.container_faa96b:not(.mainCardContainer_f369db) {
  background-color: var(--tokyo-midnight-bg-sidebars);
  border: 1px solid var(--tokyo-midnight-main2) !important;
}

/* === FORUM - POST TITLE === */
.postTitleText_faa96b {
color: var(--tokyo-midnight-text-header) !important;
}

/* === FORUM = POST DESCRIPTION */
.messageContent_faa96b {
color: var(--tokyo-midnight-text-normal);
}

.container_faa96b .text-sm\/normal_cf4812 {
    background: var(--tokyo-midnight-custom3) !important;
    -webkit-background-clip: text !important;
    background-clip: text !important;
    -webkit-text-fill-color: transparent !important;
}

.popout__76f04 {
  background-color: var(--tokyo-midnight-bg-panels);
  border: 1px solid var(--tokyo-midnight-green);
}

/* === FORUM - REACTION (ME) === */
.reaction_f8896c.reactionMe_f8896c {
  background-color: #65d7743b;
  border: 1px solid var(--tokyo-midnight-green);
}

.markup__75297 strong {
    color: var(--tokyo-midnight-green) !important;
}

/* REPLY BAR - TEXT (Want to Make it easier...?) */
.threadSuggestionBar__841c8 .text__841c8 {
    background: var(--tokyo-midnight-custom3) !important;
    -webkit-background-clip: text !important;
    background-clip: text !important;
    -webkit-text-fill-color: transparent !important;
}

/* ===REPLY BAR - CLOSE BUTTON === */
.threadSuggestionBar__841c8 [class*="closeIcon"] {
  color: var(--tokyo-midnight-red);
}

/* === FORUM - SEARCH BAR */
.container_d9be46 {
border: 1px solid var(--tokyo-midnight-border);
border-radius: 8px;
}

/* SEARCH - NEW POST BUTTON */
.container_d9be46 button:not([aria-label="Post Guidelines"]) .buttonChildrenWrapper_a22cb0 {
  color: var(--tokyo-midnight-text-header);
  border: 1px solid var(--tokyo-midnight-border-strong);
}

/* === FORUM - GUIDELINES BUTTON */
button[aria-label="Post Guidelines"] .icon_a22cb0 {
    color: var(--tokyo-midnight-green) !important;
}

/* === FORUM - SEARCH TEXT */
.title_d9be46::placeholder {
    color: var(--tokyo-midnight-green) !important;
}

/* VENCORD - ERROR CARD */
.vc-error-card {
background: var(--tokyo-midnight-critical-gradient) !important;
border: 2px dashed #ff5566 !important;
color: #ffa8b6;
border-radius: 20px;
}
/* ... */

